# Economy

./: .ci-trigger-admin-five-sections  .ci-trigger-market-model-8  .ci-trigger-population-control  .gitignore  .verify-admin-player-statistics-deploy  README.md  agent-industry-script-part-00  agent-industry-script-part-01  agent-industry-script-part-02  agent-industry-script-part-03  agent-industry-script-part-04  agent-industry-script-part-05  assets-runtime-test.html  build-error.txt  index.html  market-runtime-test.html  migration-error.txt  package-lock.json  package.json  patch-error.txt  playwright.config.ts  runtime-test.html  tsconfig.json  v6-apply-diagnostic.txt  v6-build-diagnostic.txt  vite.config.ts
.agent/: README  apply_model10.py  candidate-876  contract-tabs.patch  execution-trigger.txt  fix_model10_legacy_tests.py  page-spacing.part-01  page-spacing.part-02  page-spacing.part-03  page-spacing.part-04  page-spacing.part-05  population-five-states-00.b64  population-five-states-01.b64  population-five-states-02.b64  population-five-states-03.b64  rebase-latest-main-trigger.txt  remove-collectibles.patch.b64.part-00  remove-collectibles.patch.b64.part-01  remove-collectibles.patch.b64.part-02  remove-collectibles.patch.b64.part-03  remove-collectibles.patch.b64.part-04  remove-collectibles.patch.b64.part-05  remove-collectibles.patch.b64.part-06  remove-collectibles.patch.b64.part-07  remove-collectibles.patch.b64.part-08  (+1 more)
.github/: ci-trigger.txt  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+735 files in other folders)
